wk_taa_taaqa/src/objects/TAACustomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TAA Hierarchical custom setting</description>
    <fields>
        <fullName>BatchJobAdmin__c</fullName>
        <description>Email id of Admin who will be reported regarding the more no of records update than normal.</description>
        <inlineHelpText>Email id of Admin who will be reported regarding the more no of records update than normal.</inlineHelpText>
        <label>BatchJobAdmin</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludedAccountRecordTypeForUpdate__c</fullName>
        <description>The account record type which will we excluded while updating account address via batch job.</description>
        <inlineHelpText>The account record type which will we excluded while updating account address via batch job.</inlineHelpText>
        <label>ExcludedAccountRecordTypeForUpdate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralDataSizeInBatchJob__c</fullName>
        <description>In normal condition the maximum no of records getting update via batch job</description>
        <inlineHelpText>In normal condition the maximum no of records getting update via batch job</inlineHelpText>
        <label>GeneralDataSizeInBatchJob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TAA CustomSetting</label>
</CustomObject>